added inline styles and challenge

--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@
     <p>
       Introduction to Cascading Style Sheets (CSS)
     </p>
+    <p style="font-weight: bold; font-size: 22px; color: lightskyblue">
+      This HTML block is styled with inline-styles
+    </p>
+  </div>
+
+  <!-- Challenge -->
+  <!--
+     Using inline styles create a div element that has a background of green with yellow text inside of it. 
+     Also, add some padding around the outer container and move it down the page using margin
+     padding should be 35px all the way around
+     margin should be 50px from the top
+  -->
+  <div style="text-align: center;">
+    <p style="font-weight: bold;">
+      <!-- Write your favorite quote inside this block -->
+      Think in the morning. Act in the noon. Eat in the evening. Sleep in the night.
+    </p>
   </div>
 </body>
 </html>
