created an external stylesheet and challenge

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./styles.css">
   <title>Veterans in Technology - Day 3 - CSS</title>
 </head>
 <body>
@@ -15,5 +16,29 @@
       Introduction to Cascading Style Sheets (CSS)
     </p>
   </div>
+
+  <!-- Activity: Build your own web page with styles -->
+  <!-- Start with creating a new repo and push a copy of this code to it -->
+  
+  <!-- 
+    Create your own webpage by using different CSS properties.
+    Here are your requirements:
+    1. use at least 2 different elements with unique ID
+    2. use at least 3 different elements with unique classes
+    3. must include an image that links to another webpage
+    4. Include all your style in the external style sheet
+    5. Create an unordered list with at least 4 different list items
+    6. ALL of the following tags must be included:
+    <header></header>
+    <section></section>
+    <aside></aside>
+    <footer></footer>
+    <div></div>
+    <img />
+    <ul></ul>
+    <li></li>
+    <p></p>
+   -->
+   
 </body>
 </html>
