added extra challenges

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="./styles.css">
   <title>Veterans in Technology - Day 3 - CSS</title>
 </head>
+
 <body>
   <div>
     <h1>
@@ -19,7 +21,7 @@
 
   <!-- Activity: Build your own web page with styles -->
   <!-- Start with creating a new repo and push a copy of this code to it -->
-  
+
   <!-- 
     Create your own webpage by using different CSS properties.
     Here are your requirements:
@@ -38,7 +40,15 @@
     <ul></ul>
     <li></li>
     <p></p>
+    <a></a>
    -->
-   
+
+  <!-- EXTRA CHALLENGE -->
+  <!-- 
+     1.Use pseudo classes to add over effects
+     2.Use CSS animation for awesome transitions in colors or size
+     3. Create a grid of images that align 4x2 (4 images across with 2 rows, a total of 8 images)
+    -->
 </body>
+
 </html>
