changed the instructions

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
 
   <!-- Activity: Build your own web page with styles -->
-  <!-- Start with creating a new repo and push a copy of this code to it -->
+  <!-- Start with forking this repository -->
 
   <!-- 
     Create your own webpage by using different CSS properties.
