--- a/index.html
+++ b/index.html
@@ -1,23 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./styles.css">
-  <title>Veterans in Technology - Day 3 - CSS</title>
-</head>
-
-<body>
-  <div>
-    <h1>
-      Welcome Veterans to Day 3.
-    </h1>
-    <p>
-      Introduction to Cascading Style Sheets (CSS)
-    </p>
-  </div>
 
   <!-- Activity: Build your own web page with styles -->
   <!-- Start with forking this repository -->
@@ -49,6 +29,37 @@
      2.Use CSS animation for awesome transitions in colors or size
      3. Create a grid of images that align 4x2 (4 images across with 2 rows, a total of 8 images)
     -->
-</body>
 
+
+<html>
+<a href="default.asp">
+    <img src="https://asksoc.files.wordpress.com/2017/10/husky-grad-cap2.jpg" alt="HTML tutorial" style="widows: 50px;;height:50%;border:0;">
+  </a>
+    <head>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <header>Dog</header>
+    <body>
+      <section>Woof</section>
+        <div class="container">
+            <div class="header">HEADER</div>
+            <div class="menu">MENU</div>
+            <div class="content">CONTENT</div>
+            <div class="footer">FOOTER</div>
+          
+        </div>
+        <h1>Hello</h1>
+        <p style>Doggo</p style>
+        <aside>
+          <h4>Husky</h4>
+          <ul>
+            <p>Husky is a dog breed. Here are some examples:</p>
+          </ul>
+           </aside>
+           <ul>1. Siberian</ul>
+           <ul>2. Malamute</ul>
+           <ul>3. Samoyed</ul>
+    </body>
+    
 </html>
